adjusted plots.py to work with current optim output and added plots.py as default to singe_basin_optim.py

--- a/params.org
+++ b/params.org
@@ -1,60 +1,60 @@
 
 |  eee_val | parameter     |           min |          max |       default | flag_optimize | flag_mpr_parameter | desc                                                                                                                                                                            |
-|          | zach_thetar_1 |          0.00 |          1.0 |          0.50 | False          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_1 |          0.00 |          1.0 |          0.50 | False          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_2 |         -0.01 |         0.01 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_3 |         -0.50 |          0.5 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_4 |          0.00 |          1.0 |          0.50 | False          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_5 |         -0.01 |         0.01 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_thetas_6 |         -0.50 |          0.5 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_1    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_2    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_3    |         -0.50 |         0.50 |           0.0 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_4    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_5    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_6    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_7    |         -0.50 |         0.50 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vga_8    |         -0.10 |         0.10 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_1    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_2    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_3    |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_4    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_5    |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_6    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_7    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_8    |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_9    |         -10.0 |         10.0 |          0.00 | False          |                    |                                                                                                                                                                                 |
-|          | zach_vgn_10   |         -5.00 |         5.00 |          0.00 | False          |                    |                                                                                                                                                                                 |
+|          | zach_thetar_1 |          0.00 |          1.0 |          0.50 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_1 |          0.00 |          1.0 |          0.50 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_2 |         -0.01 |         0.01 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_3 |         -0.50 |          0.5 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_4 |          0.00 |          1.0 |          0.50 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_5 |         -0.01 |         0.01 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_thetas_6 |         -0.50 |          0.5 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_1    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_2    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_3    |         -0.50 |         0.50 |           0.0 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_4    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_5    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_6    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_7    |         -0.50 |         0.50 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vga_8    |         -0.10 |         0.10 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_1    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_2    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_3    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_4    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_5    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_6    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_7    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_8    |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_9    |         -10.0 |         10.0 |          0.00 | True          |                    |                                                                                                                                                                                 |
+|          | zach_vgn_10   |         -5.00 |         5.00 |          0.00 | True          |                    |                                                                                                                                                                                 |
 | 0.768556 | nfac          |  1.101200e+00 | 1.377400e+00 |  1.101200e+00 | False         |                    | n in vG                                                                                                                                                                         |
 | 0.717580 | wsatm         |  4.030000e-01 | 7.660000e-01 |  4.030000e-01 | False         |                    | \Theta_s in vG                                                                                                                                                                  |
 | 0.495445 | wcons         |  2.630000e-07 | 6.940000e-06 |  2.630000e-07 | False         |                    | hydraulic conductivity at saturation                                                                                                                                            |
-| 0.334823 | rsnrttemp     |  2.709600e+02 | 2.749600e+02 |  2.729600e+02 | True          |                    | Used for setting up the look up table                                                                                                                                           |
+| 0.334823 | rsnrttemp     |  2.709600e+02 | 2.749600e+02 |  2.729600e+02 | False          |                    | Used for setting up the look up table                                                                                                                                           |
 | 0.216603 | vgalpha       |  8.300000e-01 | 3.830000e+00 |  8.300000e-01 | False         |                    | \alpha in vG                                                                                                                                                                    |
-| 0.213012 | rtf1          |  2.721000e+02 | 2.760000e+02 |  2.741600e+02 | True          |                    | Upper temperature for soil water freezing                                                                                                                                       |
+| 0.213012 | rtf1          |  2.721000e+02 | 2.760000e+02 |  2.741600e+02 | False          |                    | Upper temperature for soil water freezing                                                                                                                                       |
 | 0.207276 | lambdam       | -2.342100e+00 | 2.500000e+00 | -2.342100e+00 | False         |                    | Exponent in the calculating of minimum/maximum diffusivity of soil                                                                                                              |
-| 0.171599 | rtf2          |  2.680000e+02 | 2.720000e+02 |  2.701600e+02 | True          |                    | LOwer temperature for soil water freezing                                                                                                                                       |
-| 0.154465 | ralfmaxsn     |  7.650000e-01 | 9.350000e-01 |  8.500000e-01 | True          |                    | Maximum snow albedo                                                                                                                                                             |
-| 0.114790 | ralamsn       |  1.692000e+00 | 2.068000e+00 |  1.880000e+00 | True          |                    | Exponent in snow heat conductivity                                                                                                                                              |
-| 0.087800 | ralfminsn     |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | Minimum snow albedo                                                                                                                                                             |
-| 0.078248 | rtauf         |  2.160000e-01 | 2.640000e-01 |  2.400000e-01 | True          |                    | Relaxation c for snow albedo and density (1/day)                                                                                                                                |
-| 0.068627 | rkerst3       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | Constant for defining soil heat conductivity                                                                                                                                    |
-| 0.054356 | rsndtdestroi  |  1.350000e+02 | 1.650000e+02 |  1.500000e+02 | True          |                    | snow param: used in "! Compactation due to destructive metamorphism:  ZRSNDTDEST=RSNDTDESTA*EXP(-RSNDTDESTB*(ZT0-PTSN(JL))-ZRSNDTDESTC*MAX(0.0_JPRB,PRSNM1M(JL)-RSNDTDESTROI))" |
-| 0.044422 | rsndtoverc    |  1.620000e-02 | 1.980000e-02 |  1.800000e-02 | True          |                    | snow param: Compactation due to overburden (power law)                                                                                                                          |
-| 0.041144 | rhominsna     |  9.810000e+01 | 1.199000e+02 |  1.090000e+02 | True          |                    | snow param: !New snow density: ZRHOFRESH = RHOMINSNA + RHOMINSNB*(PTSRF(JL)-RTT) + RHOMINSNC*(PUSRF(JL)**2+PVSRF(JL)**2)**0.25_JPRB                                             |
-| 0.036834 | rsndtoverb    |  7.290000e-02 | 8.910000e-02 |  8.100000e-02 | True          |                    | snow param: Compactation due to overburden (power law)                                                                                                                          |
+| 0.171599 | rtf2          |  2.680000e+02 | 2.720000e+02 |  2.701600e+02 | False          |                    | LOwer temperature for soil water freezing                                                                                                                                       |
+| 0.154465 | ralfmaxsn     |  7.650000e-01 | 9.350000e-01 |  8.500000e-01 | False          |                    | Maximum snow albedo                                                                                                                                                             |
+| 0.114790 | ralamsn       |  1.692000e+00 | 2.068000e+00 |  1.880000e+00 | False          |                    | Exponent in snow heat conductivity                                                                                                                                              |
+| 0.087800 | ralfminsn     |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | False          |                    | Minimum snow albedo                                                                                                                                                             |
+| 0.078248 | rtauf         |  2.160000e-01 | 2.640000e-01 |  2.400000e-01 | False          |                    | Relaxation c for snow albedo and density (1/day)                                                                                                                                |
+| 0.068627 | rkerst3       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | False          |                    | Constant for defining soil heat conductivity                                                                                                                                    |
+| 0.054356 | rsndtdestroi  |  1.350000e+02 | 1.650000e+02 |  1.500000e+02 | False          |                    | snow param: used in "! Compactation due to destructive metamorphism:  ZRSNDTDEST=RSNDTDESTA*EXP(-RSNDTDESTB*(ZT0-PTSN(JL))-ZRSNDTDESTC*MAX(0.0_JPRB,PRSNM1M(JL)-RSNDTDESTROI))" |
+| 0.044422 | rsndtoverc    |  1.620000e-02 | 1.980000e-02 |  1.800000e-02 | False          |                    | snow param: Compactation due to overburden (power law)                                                                                                                          |
+| 0.041144 | rhominsna     |  9.810000e+01 | 1.199000e+02 |  1.090000e+02 | False          |                    | snow param: !New snow density: ZRHOFRESH = RHOMINSNA + RHOMINSNB*(PTSRF(JL)-RTT) + RHOMINSNC*(PUSRF(JL)**2+PVSRF(JL)**2)**0.25_JPRB                                             |
+| 0.036834 | rsndtoverb    |  7.290000e-02 | 8.910000e-02 |  8.100000e-02 | False          |                    | snow param: Compactation due to overburden (power law)                                                                                                                          |
 | 0.031102 | rwrst         |  1.000000e-02 | 2.500000e-02 |  1.000000e-02 | False         |                    | \Theta_r in vG                                                                                                                                                                  |
-| 0.030752 | rsnsnow       |  6.300000e+00 | 7.700000e+00 |  7.000000e+00 | True          |                    | PLAMSK(KIDIA:KFDIA,JT) = RSNSNOW where plamsk is tiled skin layer conductivity                                                                                                  |
-| 0.024504 | rsndtovera    |  3.330000e+07 | 4.070000e+07 |  3.700000e+07 | True          |                    | Snow param: COMPACTATION DUE TO overburden (power law)  ZRSNDTOVER=0.5*PSSNM1M(JL)*RG/(RSNDTOVERA*EXP(RSNDTOVERB*(ZT0-PTSN(JL))+RSNDTOVERC*PRSNM1M(JL)))                        |
-| 0.023274 | rhominsnb     |  5.400000e+00 | 6.600000e+00 |  6.000000e+00 | True          |                    | New snow density (same as rhominsna)                                                                                                                                            |
-| 0.023180 | rsminb        |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | Bare soil minimum resistance                                                                                                                                                    |
-| 0.020512 | rsigormin     |  9.000000e+01 | 1.100000e+02 |  1.000000e+02 | True          |                    | Surface runoff orography coeff (min)                                                                                                                                            |
+| 0.030752 | rsnsnow       |  6.300000e+00 | 7.700000e+00 |  7.000000e+00 | False          |                    | PLAMSK(KIDIA:KFDIA,JT) = RSNSNOW where plamsk is tiled skin layer conductivity                                                                                                  |
+| 0.024504 | rsndtovera    |  3.330000e+07 | 4.070000e+07 |  3.700000e+07 | False          |                    | Snow param: COMPACTATION DUE TO overburden (power law)  ZRSNDTOVER=0.5*PSSNM1M(JL)*RG/(RSNDTOVERA*EXP(RSNDTOVERB*(ZT0-PTSN(JL))+RSNDTOVERC*PRSNM1M(JL)))                        |
+| 0.023274 | rhominsnb     |  5.400000e+00 | 6.600000e+00 |  6.000000e+00 | False          |                    | New snow density (same as rhominsna)                                                                                                                                            |
+| 0.023180 | rsminb        |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | False          |                    | Bare soil minimum resistance                                                                                                                                                    |
+| 0.020512 | rsigormin     |  9.000000e+01 | 1.100000e+02 |  1.000000e+02 | False          |                    | Surface runoff orography coeff (min)                                                                                                                                            |
 | 0.020465 | gdry          |  1.440000e+06 | 1.760000e+06 |  1.600000e+06 | False         |                    | Dry soil heat capacity ? (new sp. dist. parameter, used to be global)                                                                                                           |
-| 0.019742 | rlambdawat    |  5.130000e-01 | 6.270000e-01 |  5.700000e-01 | True          |                    | Water heat conductivity                                                                                                                                                         |
-| 0.018577 | rsrdep        |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | True          |                    | Surface runoff representative depth                                                                                                                                             |
-| 0.016809 | rdsnmax       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | True          |                    | Maximum snow depth (m) used in the thermal                                                                                                                                      |
-| 0.015919 | rlwcswec      |  9.000000e-02 | 1.100000e-01 |  1.000000e-01 | True          |                    | Used in snow liquid water capacity                                                                                                                                              |
-| 0.015756 | rqexp         |  3.600000e-01 | 4.400000e-01 |  4.000000e-01 | True          |                    | Exponent in Lambda calculation                                                                                                                                                  |
-| 0.014811 | rsnlargesn    |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | True          |                    | Large number to constrain Tsk variations in case of melting snow                                                                                                                |
+| 0.019742 | rlambdawat    |  5.130000e-01 | 6.270000e-01 |  5.700000e-01 | False          |                    | Water heat conductivity                                                                                                                                                         |
+| 0.018577 | rsrdep        |  4.500000e-01 | 5.500000e-01 |  5.000000e-01 | False          |                    | Surface runoff representative depth                                                                                                                                             |
+| 0.016809 | rdsnmax       |  9.000000e-01 | 1.100000e+00 |  1.000000e+00 | False          |                    | Maximum snow depth (m) used in the thermal                                                                                                                                      |
+| 0.015919 | rlwcswec      |  9.000000e-02 | 1.100000e-01 |  1.000000e-01 | False          |                    | Used in snow liquid water capacity                                                                                                                                              |
+| 0.015756 | rqexp         |  3.600000e-01 | 4.400000e-01 |  4.000000e-01 | False          |                    | Exponent in Lambda calculation                                                                                                                                                  |
+| 0.014811 | rsnlargesn    |  4.500000e+01 | 5.500000e+01 |  5.000000e+01 | False          |                    | Large number to constrain Tsk variations in case of melting snow                                                                                                                |
 |          |               |               |              |               |               |                    |                                                                                                                                                                                 |
 
 
